--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://ItsmeAnkit525.github.io/My-portfolio",
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
     "@testing-library/dom": "^10.4.0",
@@ -18,12 +17,13 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "build:github": "REACT_APP_DEPLOY_TARGET=github react-scripts build",
-    "build:vercel": "REACT_APP_DEPLOY_TARGET=vercel react-scripts build",
+    "build:github": "set PUBLIC_URL=/My-portfolio&& react-scripts build",
+    "build:vercel": "set PUBLIC_URL=&& react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build:github",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d build",
+    "deploy:vercel": "npm run build:vercel && vercel --prod"
   },
   "eslintConfig": {
     "extends": [
